compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@iter_loop_break.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "for pattern in [1, 2, 3] { break; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: IteratorLoop(
            IteratorLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                collection: Expression {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                0,
                            ),
                        },
                        index: Idx(
                            1,
                        ),
                    },
                    kind: StaticCall(
                        StaticCall {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                    Type {
                                        name: Identifier {
                                            name: "Array",
                                            location: <internal>:0:0,
                                        },
                                        type_arguments: [],
                                        location: <internal>:0:0,
                                    },
                                ],
                                name: Callable {
                                    name: Identifier {
                                        name: "new",
                                        location: <internal>:0:0,
                                    },
                                    type_arguments: [],
                                    location: <internal>:0:0,
                                },
                                location: <internal>:0:0,
                            },
                            arguments: [
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:16:17,
                                        },
                                    ),
                                    location: <internal>:16:17,
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    value: 2,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:19:20,
                                        },
                                    ),
                                    location: <internal>:19:20,
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            4,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    4,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            4,
                                                        ),
                                                    },
                                                    value: 3,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:22:23,
                                        },
                                    ),
                                    location: <internal>:22:23,
                                },
                            ],
                            location: <internal>:15:16,
                        },
                    ),
                    location: <internal>:15:16,
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    5,
                                ),
                            },
                            kind: Break(
                                Break {
                                    id: StatementId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            5,
                                        ),
                                    },
                                    location: <internal>:27:33,
                                },
                            ),
                            location: <internal>:27:33,
                        },
                    ],
                    location: <internal>:25:35,
                },
                location: <internal>:0:35,
            },
        ),
        location: <internal>:0:35,
    },
]
