compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@iter_loop_statement.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "for pattern in [1, 2, 3] { let a = 0; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: IteratorLoop(
            IteratorLoop {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                collection: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:15:16,
                    kind: StaticCall(
                        StaticCall {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [
                                            Named(
                                                Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                            Named(
                                                Identifier {
                                                    name: "Array",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "new",
                                        location: <internal>:0:0,
                                    },
                                ),
                                location: <internal>:0:0,
                            },
                            type_arguments: TypeArguments {
                                inner: [],
                            },
                            arguments: [
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    location: <internal>:16:17,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            location: <internal>:16:17,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    location: <internal>:19:20,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            location: <internal>:19:20,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    value: 2,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            4,
                                        ),
                                    },
                                    location: <internal>:22:23,
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    4,
                                                ),
                                            },
                                            location: <internal>:22:23,
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            4,
                                                        ),
                                                    },
                                                    value: 3,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    5,
                                ),
                            },
                            kind: Variable(
                                VariableDeclaration {
                                    id: StatementId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            5,
                                        ),
                                    },
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:31:32,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                6,
                                            ),
                                        },
                                        location: <internal>:35:36,
                                        kind: Literal(
                                            Literal {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        6,
                                                    ),
                                                },
                                                location: <internal>:35:36,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: ExpressionId {
                                                            def: ItemId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                6,
                                                            ),
                                                        },
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:27:37,
                        },
                    ],
                    location: <internal>:25:39,
                },
                location: <internal>:0:39,
            },
        ),
        location: <internal>:0:39,
    },
]
